Setup for POI infrastructure

--- a/src/main/webapp/WEB-INF/servlet.properties
+++ b/src/main/webapp/WEB-INF/servlet.properties
@@ -7,14 +7,14 @@
 
 # server.url=https://mmoayyed.unicon.net:8443/cas/oidc/
 # server.url=http://localhost:8080/openid-connect-server-webapp/
-server.url=http://localhost:9080/syncope-wa/oidc/
+server.url=https://localhost:8888/cas/oidc
 
 # Only applies to static/hybrid server config
-server.authz.url=${server.url}authorize
-server.token.url=${server.url}token
-server.userinfo.url=${server.url}profile
-server.jwks.url=${server.url}jwks
-server.registration.url=${server.url}register
+server.authz.url=${server.url}/authorize
+server.token.url=${server.url}/accessToken
+server.userinfo.url=${server.url}/profile
+server.jwks.url=${server.url}/jwks
+server.registration.url=${server.url}/register
 
 
 issuerService=staticIssuerService
